--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-v0-project",
+  "name": "drako-vaper",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -55,7 +55,8 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "mysql2": "^3.6.5"
   },
   "devDependencies": {
     "@types/node": "^22",
